--- a/riddle-app/package.json
+++ b/riddle-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "riddle-app",
   "version": "0.1.0",
-  "homepage": "https://benediximus.github.io/repperi",
+  "homepage": "https://benediximus.github.io/revive-ch/primus",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
